--- a/requirements.txt
+++ b/requirements.txt
@@ -1,23 +1,19 @@
-anyio==3.6.2
-beautifulsoup4==4.11.1
-certifi==2022.12.7
-charset-normalizer==2.1.1
-click==8.1.3
-fastapi==0.88.0
+annotated-types==0.7.0
+anyio==4.6.0
+beautifulsoup4==4.12.3
+certifi==2024.8.30
+charset-normalizer==3.3.2
+click==8.1.7
+fastapi==0.115.0
 h11==0.14.0
-httptools==0.5.0
-idna==3.4
-orjson==3.8.4
-pydantic==1.10.4
-python-dotenv==0.21.0
-PyYAML==6.0
-requests==2.28.1
-sniffio==1.3.0
-soupsieve==2.3.2.post1
-starlette==0.22.0
-typing_extensions==4.4.0
-urllib3==1.26.13
-uvicorn==0.20.0
-uvloop==0.17.0
-watchfiles==0.18.1
-websockets==10.4
+idna==3.10
+orjson==3.10.7
+pydantic==2.9.2
+pydantic_core==2.23.4
+requests==2.32.3
+sniffio==1.3.1
+soupsieve==2.6
+starlette==0.38.6
+typing_extensions==4.12.2
+urllib3==2.2.3
+uvicorn==0.31.0
